--- a/styles/style.css
+++ b/styles/style.css
@@ -106,7 +106,7 @@ section{
 
 .primer-seccion_contenido input{
     color: #fff;
-    padding: 1rem 3rem;
+    padding: 1rem 2rem;
     border-radius: 5px;
     border: none;
     background-color: #00669F;
@@ -119,30 +119,43 @@ section{
 }
 footer{
     background-color: #00669F;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-wrap: wrap;
     padding: 2rem 0;
     color: #fff;
-    font-size: 1.5rem;
+    display: flex;
+    width: 100vw;
+    flex-direction: column;
+    align-items: flex-end;
 }
-footer p {
+footer p{
     align-self: center;
 }
 footer a{
-    width: 20%;
-    display: flex;
-    padding-right: 4rem;
-    justify-content: flex-end;
+    position: relative;
+    width: 4rem;
+    padding-right: 2rem;
 }
 footer img{
-    width: 70%;
-}
+    position: absolute;
 
+    bottom: 0;
+    width: 4rem;
+    padding: 0 1rem;
+}
 .visible{
     position: absolute;
     visibility: hidden;
+}
+@media (max-width:505px){
+    footer p{
+        font-size: .7rem;
+    }
+    footer img{
+        position: absolute;
+
+        bottom: 0;
+        width: 4rem;
+        padding: 0 1rem;
+    }
 }
 @media (min-width:768px){
     section{
